navbar fix for admin

--- a/Smart-Event-Management-and-Ticketing-System/Views/Reviews/Edit.cshtml
+++ b/Smart-Event-Management-and-Ticketing-System/Views/Reviews/Edit.cshtml
@@ -45,11 +45,11 @@
                             <i class="fas fa-star me-1"></i>Rating (1-5 stars)
                         </label>
                         <select asp-for="Rating" class="form-control">
-                            <option value="5">????? Excellent</option>
-                            <option value="4">???? Very Good</option>
-                            <option value="3">??? Good</option>
-                            <option value="2">?? Fair</option>
-                            <option value="1">? Poor</option>
+                            <option value="5">5 Stars - Excellent</option>
+                            <option value="4">4 Stars - Very Good</option>
+                            <option value="3">3 Stars - Good</option>
+                            <option value="2">2 Stars - Fair</option>
+                            <option value="1">1 Star - Poor</option>
                         </select>
                         <span asp-validation-for="Rating" class="text-danger"></span>
                     </div>
