--- a/Smart-Event-Management-and-Ticketing-System/Views/Shared/_Layout.cshtml
+++ b/Smart-Event-Management-and-Ticketing-System/Views/Shared/_Layout.cshtml
@@ -67,6 +67,11 @@
                                 </a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-white" asp-controller="Admin" asp-action="Members">
+                                    <i class="fas fa-users me-1"></i>Members
+                                </a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-white" asp-controller="Admin" asp-action="Inquiries">
                                     <i class="fas fa-envelope me-1"></i>Inquiries
                                 </a>
