Password Hashing Removed and Configed for SQL Server

--- a/Smart-Event-Management-and-Ticketing-System/Views/Home/ResetDatabase.cshtml
+++ b/Smart-Event-Management-and-Ticketing-System/Views/Home/ResetDatabase.cshtml
@@ -33,7 +33,7 @@
 
                                 <dt class="col-sm-3">Status:</dt>
                                 <dd class="col-sm-9">
-                                    <span class="badge bg-success">Password is securely hashed</span>
+                                    <span class="badge bg-info">Plain text password (for coursework)</span>
                                 </dd>
                             </dl>
                         </div>
@@ -46,19 +46,8 @@
                             <li>? All bookings deleted</li>
                             <li>? All inquiries deleted</li>
                             <li>? All members deleted</li>
-                            <li>? Admin user created with hashed password</li>
+                            <li>? Admin user created</li>
                         </ul>
-                    </div>
-
-                    <div class="alert alert-warning">
-                        <h6><i class="fas fa-exclamation-triangle me-2"></i>Important:</h6>
-                        <p class="mb-0">
-                            <strong>Remove the temporary utility methods from HomeController:</strong>
-                            <ul class="mt-2 mb-0">
-                                <li><code>GenerateHash()</code></li>
-                                <li><code>ResetDatabase()</code></li>
-                            </ul>
-                        </p>
                     </div>
 
                     <div class="d-grid gap-2 mt-4">
